Fix typo in hero title text

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ footer {
 <!-- HERO -->
 <section class="hero">
   <div>
-    <h1 class="hero-title">Dominate the on <span>callame!</span></h1>
+    <h1 class="hero-title">Dominate on <span>callame!</span></h1>
     <p class="hero-sub">A modern Minecraft PvP network with 100 player slots, cracked support, and fast-paced competitive gameplay.</p>
     <button class="btn-primary" onclick="copyIP()">Copy Server IP</button>
   </div>
